--- a/test/style.css
+++ b/test/style.css
@@ -41,13 +41,18 @@ label{
 h3{
     font-size: 25px;
 }
-
+h1{
+    border: 2px solid gray;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 20px;
+}
 input{
     justify-content: center;
 }
 
 .second-div {
-    margin-top: 200px;
+    margin-top: 100px;
     align-self: bottom;
 }
 button{
@@ -71,4 +76,8 @@ button{
 img{
     width: 150px;
     height: 150px;
+}
+
+h1{
+    font-size: 25px;
 }
